# feamerge

./: .gitignore  README.md  break_groups_in_fea.py  break_groups_in_mark_pos.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yaml
feamerge/: cli.py
feamerge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fontra_feamerge/: __init__.py  plugin.py
test/: Myfont.designspace  variable_feature.fea
test/Myfont_Bold.ufo/: features.fea  fontinfo.plist  kerning.plist
test/Myfont_Bold.ufo/glyphs/: A_.glif  V_.glif  acutecomb.glif
test/Myfont_Italic.ufo/: features.fea  kerning.plist
test/Myfont_Italic.ufo/glyphs/: A_.glif  V_.glif  acutecomb.glif  contents.plist
test/Myfont_Regular.ufo/: features.fea  fontinfo.plist  kerning.plist
test/Myfont_Regular.ufo/glyphs/: A_.glif  V_.glif  acutecomb.glif  contents.plist
