[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feamerge"
version = "0.1.2"
description = "Python script to merge Adobe feature files into a single variable feature file"
authors = [{ name = "mitradranirban" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fonttools[ufo]>=4.0.0"
]

[tool.setuptools]
packages = ["feamerge"]

[project.scripts]
feamerge = "feamerge.cli:main"

[project.urls]
"Homepage" = "https://github.com/mitradranirban/feamerge"
"Repository" = "https://github.com/mitradranirban/feamerge"
